--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html>
   <body>
 
-    <h1>My Heading</h1>
-    <p>My only paragraph.</p>
-    <p>Actually, two of them.</p>
+    <h1>Observe my fast load times.</h1>
+    <a href="/papers/hash-attack.pdf">Hash Attack</a>
+    <a href="/papers/leetcode.pdf">LeetCode</a>
+    <a href="/papers/pgp-and-smime.pdf">PGP and S/MIME</a>
+    <a href="/papers/travelling-salesperson.pdf">Travelling Salesman Problem</a>
 
   </body>
 </html> 
