feat: full (mostly) typst support

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <ul>
       <li><a href="/papers/from-typst.pdf">from typst!</a></li>
       <li><a href="/papers/from-md.html">from markdown!</a></li>
+      <li><a href="/papers/convex-hull/main.pdf">Convex Hull</a></li>
     </ul>
   </body>
 </html>
