feat: migrate papers from typst.app

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,27 @@
   <body>
     <h1>Observe my fast load times.</h1>
 
-    <h2>Important Papers:</h2>
+    <h2>Some Papers:</h2>
+    <p><b>Algorithm Design and Analysis</b></p>
     <ul>
-      <li><a href="/papers/from-typst.pdf">from typst!</a></li>
-      <li><a href="/papers/from-md.html">from markdown!</a></li>
+      <li><a href="/papers/primality-test/main.pdf">Primality Test</a></li>
       <li><a href="/papers/convex-hull/main.pdf">Convex Hull</a></li>
+      <li><a href="/papers/leetcode/main.pdf">LeetCode</a></li>
+      <li><a href="/papers/network-routing/main.pdf">Network Routing</a></li>
+      <li><a href="/papers/gene-sequencing/main.pdf">Gene Sequencing</a></li>
+      <li>
+        <a href="/papers/travelling-salesman/main.pdf">
+          Travelling Salesman Problem
+        </a>
+      </li>
+    </ul>
+    <p><b>Computer Security</b></p>
+    <ul>
+      <li><a href="/papers/hash-attack/main.pdf">Hash Attack</a></li>
+      <li><a href="/papers/pgp-and-smime/main.pdf">PGP and S/MIME</a></li>
+      <li>
+        <a href="/papers/extracting-secrets/main.pdf">Extracting Secrets</a>
+      </li>
     </ul>
   </body>
 </html>
